<!-- ~ Copyright 2014 OCTO Technology ~ ~ Licensed under the Apache License, Version 2.0 (the "License"); ~ you may not use this file except in compliance with the License. ~ You may obtain a copy of the License at ~ ~ http://www.apache.org/licenses/LICENSE-2.0 ~ ~ Unless required by applicable law or agreed to in writing, software ~ distributed under the License is distributed on an "AS IS" BASIS, ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. ~ See the License for the specific language governing permissions and ~ limitations under the License. -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.octo.reactive.audit</groupId>
    <artifactId>reactive-audit-integration</artifactId>
    <version>0.0.2-SNAPSHOT</version>
    <name>Reactive Audit Tool Integration Test Application</name>

    <properties>
        <reactive.audit.agent.version.string>0.8</reactive.audit.agent.version.string>
        <aspectjweaver.version>1.8.2</aspectjweaver.version>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <junit.version>4.11</junit.version>
        <commons-io.version>2.4</commons-io.version>
        <commons-codec.version>1.10</commons-codec.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.octo.reactive.audit</groupId>
            <artifactId>reactive-audit-agent</artifactId>
            <version>${reactive.audit.agent.version.string}</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectjweaver.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commons-codec.version}</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.11</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.apache.maven.surefire</groupId>
                            <artifactId>surefire-junit47</artifactId>
                            <version>2.12</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <excludedGroups>com.octo.reactive.sample.IntegrationTest</excludedGroups>
                    </configuration>
                </plugin>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-dependency-plugin</artifactId>
                                        <versionRange>[2.4,)</versionRange>
                                        <goals>
                                            <goal>copy-dependencies</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore />
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <archive>
                        <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>run</id>

            <build>
                <plugins>

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.3.2</version>
                        <executions>
                            <execution>
                                <id>launch</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>java</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <includeProjectDependencies>true</includeProjectDependencies>
                            <mainClass>com.octo.reactive.sample.TestApp</mainClass>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>audit</id>

            <properties>
                <java-ext-dir>${java.home}${file.separator}lib${file.separator}ext</java-ext-dir>

                <project.artifact.filename>${project.artifactId}-${project.version}.jar</project.artifact.filename>
                <audit-libs-extract-dir>${project.build.directory}${file.separator}audit-libs</audit-libs-extract-dir>
                <reactive-audit-lib-home>${audit-libs-extract-dir}</reactive-audit-lib-home>
                <reactive-audit-output-dir>${project.build.directory}/reactive-audit-output</reactive-audit-output-dir>
                <aspectjweaver.artifact.path>${org.aspectj:aspectjweaver:jar}</aspectjweaver.artifact.path>
            </properties>

            <build>
                <plugins>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>2.4</version>
                        <executions>
                            <execution>
                                <id>copy-dependencies</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                    <goal>properties</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${audit-libs-extract-dir}</outputDirectory>
                                    <overWriteReleases>false</overWriteReleases>
                                    <overWriteSnapshots>false</overWriteSnapshots>
                                    <overWriteIfNewer>true</overWriteIfNewer>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-resources-plugin</artifactId>
                        <version>2.6</version>
                        <executions>
                            <execution>
                                <id>copy-integration-test-resources</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>testResources</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>1.7</version>
                        <executions>
                            <execution>
                                <phase>pre-integration-test</phase>
                                <configuration>
                                    <target>
                                        <echo message="Creating output folder for reactive audit..." />
                                        <mkdir dir="${reactive-audit-output-dir}" />
                                    </target>
                                </configuration>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.3.2</version>
                        <executions>
                            <execution>
                                <id>launch-with-reactive-audit</id>
                                <phase>integration-test</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>java</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                            <arguments>
                                <argument>-DreactiveAudit=${project.build.testOutputDirectory}/reactiveAudit.properties</argument>
                                <argument>-DreactiveAudit_logOutput=${reactive-audit-output-dir}/audit.log</argument>

                                <argument>-javaagent:${aspectjweaver.artifact.path}</argument>
                                <argument>-Djava.ext.dirs=${java-ext-dir}${path.separator}${reactive-audit-lib-home}</argument>
                                <argument>-jar</argument>
                                <argument>${project.artifact.filename}</argument>
                            </arguments>
                            <outputFile>${reactive-audit-output-dir}/reactiveAuditConsole.log</outputFile>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.18.1</version>

                        <configuration>
                            <systemPropertyVariables>
                                <buildDirPath>${project.build.testOutputDirectory}</buildDirPath>
                                <auditFilePath>${reactive-audit-output-dir}/audit.log</auditFilePath>
                                <consoleOutputFilePath>${reactive-audit-output-dir}/reactiveAuditConsole.log</consoleOutputFilePath>
                            </systemPropertyVariables>
                        </configuration>
                        <executions>
                            <execution>
                                <id>perform-audit-integration-test</id>
                                <phase>integration-test</phase>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <repositories>
        <repository>
            <id>Sonatype-staging-repository</id>
            <name>Sonatype's Staging Maven repository</name>
            <url>https://oss.sonatype.org/content/groups/staging</url>
            <releases>
                <updatePolicy>always</updatePolicy>
            </releases>
            <snapshots>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
</project>